RESOLVED FIXED238020
[GTK][WPE] m_compositorThread ASSERT in TextureMapper classes can just be used in debug mode
https://bugs.webkit.org/show_bug.cgi?id=238020
Summary [GTK][WPE] m_compositorThread ASSERT in TextureMapper classes can just be use...
Alejandro G. Castro
Reported 2022-03-17 06:39:23 PDT
The m_compositorThread attribute is just defined in debug we can not use it outside in case someone compiles with assertions and debug build, Michael pointed it out in the bug #237948
Attachments
Patch (5.03 KB, patch)
2022-03-17 06:49 PDT, Alejandro G. Castro
no flags
Patch for landing (5.03 KB, patch)
2022-03-17 13:01 PDT, Alejandro G. Castro
no flags
Alejandro G. Castro
Comment 1 2022-03-17 06:49:52 PDT
Michael Catanzaro
Comment 2 2022-03-17 07:20:29 PDT
Comment on attachment 454966 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=454966&action=review > Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerProxyGL.cpp:92 > ASSERT(m_compositorThread == &Thread::current()); > +#if ASSERT_ENABLED > + m_compositorThread = nullptr; > +#endif Indentation is off here
Alejandro G. Castro
Comment 3 2022-03-17 12:56:25 PDT
(In reply to Michael Catanzaro from comment #2) > Comment on attachment 454966 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=454966&action=review > > > Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerProxyGL.cpp:92 > > ASSERT(m_compositorThread == &Thread::current()); > > +#if ASSERT_ENABLED > > + m_compositorThread = nullptr; > > +#endif > > Indentation is off here Right! Thanks for the review Michael.
Alejandro G. Castro
Comment 4 2022-03-17 13:01:01 PDT
Created attachment 455007 [details] Patch for landing
EWS
Comment 5 2022-03-17 14:22:34 PDT
Committed r291442 (248566@main): <https://commits.webkit.org/248566@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455007 [details].
Note You need to log in before you can comment on or make changes to this bug.