[GTK][WPE] m_compositorThread ASSERT in TextureMapper classes can just be used in debug mode https://bugs.webkit.org/show_bug.cgi?id=238020

Patch by Alejandro G. Castro <alex@igalia.com> on 2022-03-17
Reviewed by Michael Catanzaro.

This is a build fix for the case where someone compiles release
with asserts activated.

* platform/graphics/texmap/TextureMapperPlatformLayerProxyDMABuf.cpp:
(WebCore::TextureMapperPlatformLayerProxyDMABuf::activateOnCompositingThread):
(WebCore::TextureMapperPlatformLayerProxyDMABuf::invalidate):
* platform/graphics/texmap/TextureMapperPlatformLayerProxyDMABuf.h:
* platform/graphics/texmap/TextureMapperPlatformLayerProxyGL.cpp:
(WebCore::TextureMapperPlatformLayerProxyGL::activateOnCompositingThread):
(WebCore::TextureMapperPlatformLayerProxyGL::invalidate):
* platform/graphics/texmap/TextureMapperPlatformLayerProxyGL.h:


Canonical link: https://commits.webkit.org/248566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291442 268f45cc-cd09-0410-ab3c-d52691b4dbfc